# lotrchess

./: CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
include/: battle_setup_controller.hpp  battle_setup_dialog.hpp  battle_setup_dialog_view.hpp  battle_setup_mode.hpp  battle_setup_screen.hpp  battle_setup_view.hpp  bitmask.hpp  board.hpp  board_view.hpp  chess_move.hpp  defines.hpp  engine_interface.hpp  extern.hpp  globals.hpp  lotrchess.hpp  move_gen.hpp  music_player.hpp  play_controller.hpp  play_mode.hpp  play_screen.hpp  play_view.hpp  splash_controller.hpp  splash_dialog.hpp  splash_dialog_view.hpp  splash_mode.hpp  splash_screen.hpp  splash_view.hpp  string_manip.hpp  toggle_button.hpp
res/engine/: prometheus  senpai
src/: CMakeLists.txt  attack.cpp  battle_setup_controller.cpp  battle_setup_dialog.cpp  battle_setup_dialog_view.cpp  battle_setup_mode.cpp  battle_setup_screen.cpp  battle_setup_view.cpp  bitmask.cpp  board.cpp  board_view.cpp  chess_move.cpp  engine_interface.cpp  lotrchess.cpp  main.cpp  move_gen.cpp  music_player.cpp  play_controller.cpp  play_mode.cpp  play_screen.cpp  play_view.cpp  splash_controller.cpp  splash_dialog.cpp  splash_dialog_view.cpp  splash_mode.cpp  splash_screen.cpp  splash_view.cpp  string_manip.cpp  toggle_button.cpp
